metadata/force-app/main/default/objects/Sample__c/Sample__c.object-meta.xml
<CustomObject>
    <label>Sample</label>
    <nameField>
        <label>Sample Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Samples</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>