metadata/force-app/main/default/objects/Sample__c/fields/test_sample1__c.field-meta.xml
<CustomField>
    <fullName>test_sample1__c</fullName>
    <label>test sample1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>