metadata/force-app/main/default/objects/Sample__c/fields/test_sample2__c.field-meta.xml
<CustomField>
    <fullName>test_sample2__c</fullName>
    <label>test sample2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>