metadata/force-app/main/default/objects/Sample__c/fields/test_sample__c.field-meta.xml
<CustomField>
    <fullName>test_sample__c</fullName>
    <label>test sample</label>
    <length>50</length>
    <type>Text</type>
</CustomField>