metadata/force-app/main/default/objects/Sample__c/fields/Test_Type__c.field-meta.xml
<CustomField>
    <fullName>Test_Type__c</fullName>
    <label>Test Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Metadata</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>