metadata/force-app/main/default/objects/Sample__c/fields/TestAnotherPVS__c.field-meta.xml
<CustomField>
    <fullName>TestAnotherPVS__c</fullName>
    <label>TestAnotherPVS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>