metadata/force-app/main/default/objects/Sample__c/fields/TestPVSSample__c.field-meta.xml
<CustomField>
    <fullName>TestPVSSample__c</fullName>
    <label>TestPVSSample</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>