metadata/force-app/main/default/objects/Sample__c/validationRules/Name_Greater_Than_3.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_Greater_Than_3</fullName>
    <active>false</active>
    <description>Name length greater than 3</description>
    <errorConditionFormula>LEN( Name ) &gt; 3</errorConditionFormula>
    <errorMessage>Name length greater than 3</errorMessage>
</ValidationRule>